tests/ui/parser/empty_call_opts.stderr
error: expected one of `(`, `.`, `;`, `?`, or `[`, found `{`
  --> ROOT/tests/ui/parser/empty_call_opts.sol:LL:CC
   |
LL |     f{}();
   |      ^ expected one of `(`, `.`, `;`, `?`, or `[`
   |

error: aborting due to 1 previous error

