tests/ui/parser/empty_call_opts.sol
function f() {
    f{gas:69}();
    f{}(); //~ ERROR: expected one of
}
